--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "geolib": "^3.3.1",
-    "js-combinatorics": "^0.6.0",
-    "jsonfile": "^6.0.1",
-    "lodash": "^4.17.15"
+    "js-combinatorics": "^0.6.0"
   },
   "devDependencies": {},
   "scripts": {
