--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "geolib": "^3.3.1",
-    "js-combinatorics": "^0.6.0"
+    "js-combinatorics": "^0.6.0",
+    "v8-compile-cache": "^2.1.1"
   },
   "devDependencies": {},
   "scripts": {
