--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "config": "^3.3.1",
+    "fluxunit": "^1.4.0",
     "geolib": "^3.3.1",
     "js-combinatorics": "^0.6.0"
   },
